# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2001 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  29 Dec 2001; Donny Davies (woodchip@gentoo.org):
    sort -t: -k3,3 -n /etc/passwd,group.  Ahhhh :))

  28 Dec 2001; Martin Schlemmer (azarah@gentoo.org); Updated
    /etc/init.d/depscan.sh to store info about missing dependancies of
    type 'need' in ${svcdir}/broken.  Also updated /etc/init.d/runscript.sh
    to use this when starting a script ('need' dependancies is critical for
    startup).  Added the broken() function to /etc/init.d/runscript.sh
    to list the missing dependancies.

    Updated /etc/init.d/runscript.sh for svc_start() to have better error
    checking.

    Updated /etc/init.d/functions.sh with ewend(), which is the same as
    eend(), but print a warning on error, not a error.  Updated
    /etc/init.d/checkroot and /etc/init.d/checkfs to use this function.

  27 Dec 2001; Martin Schlemmer (azarah@gentoo.org); Update /sbin/runscript.c
    to run /etc/init.d/rc-help.sh if no arguments is passed to a rc-script.
  
    Added /etc/init.d/rc-help.sh, simple script that prints out help for
    the rc-scripts.

  25 Dec 2001; Martin Schlemmer (azarah@gentoo.org); Update
  /etc/init.d/shutdown.sh and /etc/init.d/reboot.sh not to force the
  halt and reboot.  This fixes a problem where / was not unmounted
  properly in some cases.

  24 Dec 2001; Martin Schlemmer (azarah@gentoo.org): Move $svcdir to
    to /etc/init.d/functions.sh, and update /etc/init.d/runscript.sh and
    /etc/init.d/depscan.sh for this

    Modified /etc/init.d/runscript.sh to also restart the services that
    depend on a service if that service is restarted.  Enhanced the
    restart function to be able to have custom restart() functions in
    rc-scripts.  The custom restart() have to use svc_stop() and
    svc_start() to restart the service.
